sys/compat/linux/linux_getcwd.c
@@ -74,6 +74,8 @@ linux_getcwd(struct thread *td, struct linux_getcwd_args *uap)
 
 	buf = malloc(buflen, M_TEMP, M_WAITOK);
 	error = vn_getcwd(buf, &retbuf, &buflen);
+	if (error == ENOMEM)
+		error = ERANGE;
 	if (error == 0) {
 		error = copyout(retbuf, uap->buf, buflen);
 		if (error == 0)
